--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # "/" + 仓库的名字. 资源文件的路径组成部分
-baseurl: "qu-bi-er-luo-blog"
+baseurl: "qubierluo"
 
 # 网站的主标题
 title: "曲比尔洛"
 # 网站副标题
-subTitle: "来自四川凉山州的强棒女孩"
+subTitle: "——来自四川凉山州的强棒女孩"
 
 # 其它配置, 可忽略, 无需修改
 permalink: /:title/
